# lift_with_me

./: Cargo.toml  LICENSE  Makefile  README.md
resources/: Lift With Me.postman_collection.json
src/: lib.rs  scheduler.rs  ticker.rs
src/model/: elevator.rs  mod.rs  operation.rs
src/routes/: heath.rs  lift.rs  mod.rs  status.rs
